# poc_vector_sqlite

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  chat.bat  config.py  example_phase5.py  main.py  pyproject.toml  run_flask_app.bat  run_flask_app.sh  semantic.db-journal  semantic.toml
.github/agents/: code_checker.agent.md
.github/instructions/: commit_message.md.instructions.md  concept.instructions.md  docstring_guide.instructions.md
doc/architecture/: 00_documentation_style_guide.md  00_overview.md  01_embeddings_basics.md  02_gemini_api.md  03_sqlite_vec.md  04_search_types.md  05_hybrid_search_rrf.md  06_project_architecture.md  07_data_flow.md  09_parent_child_retrieval.md  10_solid_refactoring.md  11_storage_layer_phase2.md  12_descriptor_protocol.md  13_method_patching.md  14_orm_to_semantic.md  15_smart_parsing.md  16_smart_splitting.md  17_hierarchical_context.md  (+41 more)
docs/: README.md
domain/: __init__.py  models.py
examples/flask_app/: .gitignore  README.md  pyproject.toml  run.py  semantic.db-shm  semantic.db-wal
examples/flask_app/app/: __init__.py  config.py  extensions.py  logging.py
examples/flask_app/app/models/: __init__.py  cache.py  chat.py
examples/flask_app/app/routes/: __init__.py  chat.py  ingest.py  main.py  search.py  settings.py
examples/flask_app/app/services/: __init__.py  cache_service.py  chat_service.py  search_service.py  upload_service.py
examples/flask_app/app/static/css/: style.css
examples/flask_app/app/static/js/: app.js
examples/flask_app/app/templates/: about.html  base.html  chat.html  document_detail.html  documents.html  index.html  ingest.html  media.html  queue.html  search.html  settings.html
examples/flask_app/app/templates/partials/: chat_error.html  chat_messages.html  chat_response.html  chat_sessions.html  chat_tokens_counter.html  queue_tasks.html  search_documents.html  search_error.html  search_results.html
examples/flask_app/app/utils/: __init__.py  markdown.py
examples/flask_app/tests/: conftest.py  test_app_factory.py  test_cache.py  test_chat.py  test_config.py  test_core_injection.py  test_e2e_search.py  test_ingest.py  test_logging.py  test_queue_monitor.py  test_santa_search.py  test_search.py  test_settings.py
examples/flask_app/uploads/: .gitkeep
semantic_core/: __init__.py  batch_manager.py  config.py  database.py  embeddings.py  pipeline.py  search.py  search_mixin.py  services.py
tests/: README.md  conftest.py  test_phase_1_architecture.py  test_phase_2_storage.py  test_search.py
(+448 files in other folders)
